--- a/src/assets/weather.css
+++ b/src/assets/weather.css
@@ -21,7 +21,7 @@ body {
   .input-sxn {
     display: flex;
     align-items: center;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
   }
   
   .input-feild {
@@ -33,6 +33,7 @@ body {
     background-color: rgba(255, 255, 255, 0.1);
     color: white;
     outline: none;
+    
   }
   
   .search-btn {
@@ -40,20 +41,21 @@ body {
     border: none;
     border-radius: 5px;
     color: white;
-    padding: 10px 20px;
+    padding: 4px 8px;
     font-size: 16px;
     cursor: pointer;
     transition: background-color 0.2s ease;
   }
   
   .search-btn:hover {
-    background-color: #5342ed;
+    /* background-color: #5342ed; */
+    scale: 125%;
   }
   
   /* Weather info section */
   .second-sxn {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     width: 100%;
     padding: 20px;
   }
@@ -69,13 +71,27 @@ body {
   /* Weather icon and condition */
   .iconsection {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
+    background-color: rgba(255, 255, 255, 0.1);
+    border-radius: 10px;
+    padding: 20px;
+    text-align: center;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    margin-left: -150px;
+    transition: margin-left 0.3s ease;
+    position: fixed;
+    left: 0%;
+  }
+  .iconsection:hover{
+    margin-left: -10px;
+    
   }
   
   .ig1 {
-    max-width: 80px;
+    max-width: 120px;
+    margin-left: 40px;
     height: auto;
   }
   
@@ -90,15 +106,45 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-left: 80px;
+    text-align: center;
+    
+    
+    
 
+  }
+  .loaction-sxn p{
+    font-size: 20px;
+    margin: 8px 0px;
   }
   .time-sxn {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
+    background-color: rgba(255, 255, 255, 0.1);
+    border-radius: 10px;
+    padding: 20px;
+    text-align: center;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    margin-right: -288px;
+    transition: margin-right 0.3s ease;
+    position: fixed;
+    right: 0%;
   }
+  .time-sxn:hover{
+    margin-right: -10px;
+    
+  }
+  .details-sxn{
+    display: flex;
+    flex-direction: row;
+    
+  }
+ .detail-span{
+  padding-top: 4px;
+  font: 30px  ;
+ }
+ .space-tag{ margin-left: 20px;}
   
   /* Weather details */
   .third-sxn {
@@ -110,7 +156,7 @@ body {
   .hd1,
   .hd2,
   .hd3 {
-    font-size: 20px;
+    font-size: 16px;
     margin: 10px 10px;
   }
   
